--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "headers": [
     {
       "source": "/(.*)",
+      "destination": "/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Credentials",
