--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,25 @@
 {
   "headers": [
-    {
-      "source": "/(.*)",
-      "destination": "/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "POST"
+      {
+          "source": "/(.*)",
+          "headers": [
+              {
+                  "key": "Access-Control-Allow-Credentials",
+                  "value": "true"
+              },
+              {
+                  "key": "Access-Control-Allow-Origin",
+                  "value": "*"
+              },
+              {
+                  "key": "Access-Control-Allow-Methods",
+                  "value": "GET, OPTIONS, PATCH, DELETE, POST, PUT"
+              },
+              {
+                  "key": "Access-Control-Allow-Headers",
+                  "value": "X-CSRF-Token, X-Requested-With, Accept, Accept- Version, Content - Length,  Content - MD5, Content - Type, Date, X - Api - Version"
         }
-      ]
-    }
+  ]
+}
   ]
 }
